syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;

//Discount service definition
service DiscountProtoService {
	//Discount CRUD operations
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc GetAllDiscounts(GetAllDiscountsResquest) returns (GetAllDiscountsResponse);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName = 1;
}

message GetAllDiscountsResquest {
	bool list = 1;
}

message GetAllDiscountsResponse {
	repeated string list = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}